# nph

./: COPYRIGHT  ChangeLog  Makefile.in  README  TODO  config.h.in  configure  configure.ac  nphrc  postinstall.in
autoconf/: ac_path_generic.m4
buffer/: ChangeLog  TODO  buffer.c.in  buffer.h.in  module.ac
compat/: ChangeLog  module.ac
doc/: Makefile.in  nph.1  ph_change.3  ph_email_resolve.3  ph_encode_selector.3  ph_get_fieldinfo.3  ph_get_option.3  ph_get_siteinfo.3  ph_id.3  ph_login.3  ph_open.3  ph_query.3  ph_rfd.3  ph_serverlist_add.3  ph_set_sendhook.3  ph_www_resolve.3
lib/: Makefile.in  auth.c  change.c  fields.c  handle.c  internal.h  misc.c  options.c  phclient.h  protocol.c  query.c  redirection.c  serverlist.c  siteinfo.c
mmgr/: ChangeLog  TODO  mmgr.c.in  mmgr.h.in  module.ac
nph/: Makefile.in  commands.c  conf.c  content.c  edit.c  init.c  interactive.c  login.c  nph.c  nph.h  output.c  serverinfo.c  sighandler.c
